<resources>
    <string name="app_name">ZENNY</string>
    <string name="track_your_daily_goals_and_feel_n_accomplished">Track your daily goals and feel \n accomplished</string>
    <string name="next">Next</string>
    <string name="build_healthy_habits">Build Healthy Habits</string>
    <string name="skip">Skip</string>
    <string name="track_your_mood">Track Your Mood</string>
    <string name="understand_your_feelings_with_n_emoji_journaling">Understand your feelings with \n emoji journaling.</string>
    <string name="see_your_progress">See Your Progress</string>
    <string name="clebrate_your_small_wins_every_n_day">Clebrate your small wins every \n day.</string>
    <string name="get_started">Get Started</string>
    <string name="have_a_nice_day_">Have a Nice Day !</string>
    <string name="notification_icon">notification Icon</string>
    <string name="home">Home</string>
    <string name="today_s_progress">Today\'s Progress 🎯</string>
    <string name="mood">Mood</string>
    <string name="hydration">Hydration</string>
    <string name="select_emoji">Select emoji</string>
    <string name="how_are_you_feeling_today">How are you Feeling Today ?</string>
    <string name="add">Add</string>
    <string name="mood_journal">✨ Mood Journal ✨</string>
    <string name="monthly_analysis">Monthly Analysis</string>
    <string name="weekly_analysis">Weekly Analysis</string>
    <string name="select_emoji_">Select emoji</string>
    <string name="happy">😀</string>
    <string name="sad">😞</string>
    <string name="confused">😐</string>
    <string name="cry">😭</string>
    <string name="angry">😡</string>
    <string name="note_optional">Note (optional)</string>
    <string name="save">Save</string>
    <string name="add_a_new_habit">Add a New Habit</string>
    <string name="enter_habit_name_e_g_read_a_book">Enter habit name (e.g., Read a book)</string>
    <string name="choose_time">Choose Time</string>
    <string name="plus">➕</string>
    <string name="daily_habits">Daily Habits</string>
    <string name="_0">0%</string>
    <string name="user">User</string>
    <string name="delete_habit">Delete Habit</string>
    <string name="edit_habit">Edit Habit</string>
    <string name="zenny">Zenny</string>
    <string name="daily_track">Daily Track</string>
    <string name="change_photo">Change Photo</string>
    <string name="name">Name</string>
    <string name="shown_as">Shown As</string>
    <string name="email">Email</string>
    <string name="save2">Save</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="help">Help</string>
    <string name="cancel">Cancel</string>
    <string name="set_goal">Set Goal</string>
    <string name="_0_0ml">0/0ml</string>
    <string name="center_action">Center Action</string>
    <string name="_200ml">200ml</string>
    <string name="select_your_glass_size">Select your glass size</string>
    <string name="select_yourglass_size">Select yourglass size</string>
    <string name="count_down">Count Down</string>
    <string name="refresh">Refresh</string>
    <string name="add_habit_tap_the_button_at_the_bottom_to_create_a_new_habit_edit_delete_habit_long_press_on_any_habit_in_the_list_to_open_the_options_menu_where_you_can_edit_or_delete_it">• Add Habit: Tap the \'+\' button at the bottom to create a new habit. • Edit/Delete Habit: Long-press on any habit in the list to open the options menu where you can edit or delete it.</string>
    <string name="mood_page_analysis">Mood Page: Analysis</string>
    <string name="add_mood_use_the_bottom_sheet_to_add_your_mood_for_the_day_monthly_analysis_the_calendar_on_the_mood_page_shows_your_mood_for_each_day_tap_on_a_day_to_see_details_the_chart_below_shows_a_summary_of_your_moods_over_the_current_month">• Add Mood: Use the bottom sheet to add your mood for the day. • Monthly Analysis: The calendar on the Mood page shows your mood for each day. Tap on a day to see details. The chart below shows a summary of your moods over the current month.</string>
    <string name="hydration_">Hydration</string>
    <string name="set_glass_size_go_to_the_hydration_tab_and_tap_on_the_settings_icon_to_set_your_preferred_glass_size_set_hours_amp_reminder_in_the_same_settings_menu_you_can_define_your_drinking_hours_and_enable_reminders_to_stay_hydrated_throughout_the_day"><![CDATA[• Set Glass Size: Go to the Hydration tab and tap on the settings icon to set your preferred glass size. • Set Hours & Reminder: In the same settings menu, you can define your drinking hours and enable reminders to stay hydrated throughout the day.]]></string>
    <string name="close">Close</string>
</resources>