<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_a_new_habit"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/etHabitName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_habit_name_e_g_read_a_book"
        android:inputType="textCapSentences"/>

    <Button
        android:id="@+id/btnChooseTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_time"
        android:layout_marginTop="16dp" />

</LinearLayout>