<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8F8"
    android:padding="24dp"
    tools:context=".activity_onboard1">

    <TextView
        android:id="@+id/skipText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:textColor="#9C8AA5"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginTop="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="6dp"
        app:layout_constraintTop_toBottomOf="@id/skipText1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:padding="8dp"
            app:srcCompat="@drawable/mood" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/adlam_display"
        android:gravity="center"
        android:text="@string/track_your_mood"
        android:textColor="#5E4075"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView1" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/track_your_daily_goals_and_feel_n_accomplished"
        android:textColor="#7E7E7E"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="290dp"
        android:layout_height="65dp"
        android:backgroundTint="#5E4075"
        android:fontFamily="sans-serif-medium"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <LinearLayout
        android:id="@+id/pageIndicator1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/dot3"
            android:layout_width="24dp"
            android:layout_height="10dp"
            android:layout_marginEnd="4dp"
            app:srcCompat="@drawable/dot" />

        <ImageView
            android:id="@+id/bar1"
            android:layout_width="20dp"
            android:layout_height="10dp"
            android:layout_marginEnd="4dp"
            app:srcCompat="@drawable/bar" />

        <ImageView
            android:id="@+id/dot4"
            android:layout_width="10dp"
            android:layout_height="10dp"
            app:srcCompat="@drawable/dot" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
